# pytorch-crf

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: run_tests.yml
tests/: test_crf.py
